fixed nav menu spacing

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -81,4 +81,4 @@
       padding: 0
 
     .home
-      margin-top: 30px
+      margin-top: 10px
